# htmltidy

./: .gitignore  BUGS  CREDITS  ChangeLog  MAILINGLIST  Makefile  Makefile.am  Makefile.bcc32  Makefile.nmake  Makefile.vc6  NEWS  README  README.maintainer  README.win32  autogen.sh  bootstrap.sh  configure  configure.in  create-distribs.bat  create-distribs.exclude  create-distribs.src.exclude  index.html  libtool  man_page.txt  tidy4aug00.tgz
CVSROOT/: checkoutlist  loginfo  mysyncmail
console/: Makefile.am  tidy.c
contrib/: 0001-ASSOCIATE_LABELS_EXPLICITLY_ID-and-_FOR.patch  0001-Detect-bad-header-5.1.2.1-even-if-thead-is-used.patch  0001-identify-invalide-for-target.patch  2798014-test.php  2811690 Test.html  2819896-TabTest.html  2893644-docSaveString-fix_null_termination.patch  2898666 sample.html  2898666-sample.output.html  2898666-tidy.patch  HTMLTidy_Bug2811690.patch  HTMLTidy_Bug2819896.patch  HTMLTidy_Bug2819903.patch  TIDY_STORE_ORIGINAL_TEXT.patch  hecks_id_presence_for_TEXTAREA_and_SELECT.diff
htmldoc/: doxygen.cfg  tidy1.xsl
htmldoc/api/: annotated.html  buffio_8h.html  buffio_8h_source.html  classes.html  deprecated.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  globals_type.html  group__AttrGet.html  group__AttrGetAttributeName.html  group__AttrIsAttributeName.html  group__Attribute.html  group__Basic.html  group__Clean.html  group__Configuration.html  group__IO.html  group__Memory.html  group__NodeAsk.html  group__NodeIsElementName.html  group__Opaque.html  group__Parse.html  group__Save.html  group__Tree.html  index.html  main.html  modules.html  pages.html  platform_8h_source.html  structTidyAttr.html  structTidyDoc.html  structTidyNode.html  structTidyOption.html  struct__TidyAllocator.html  struct__TidyAllocatorVtbl.html  struct__TidyBuffer.html  (+6 more)
include/: buffio.h  platform.h  tidy.h  tidyenum.h
m4/: cpp_option.m4
src/: Makefile.am  access.c  access.h  alloc.c  attrask.c  attrdict.c  attrdict.h  attrget.c  attrs.c  attrs.h  buffio.c  charsets.c  charsets.h  clean.c  clean.h  config.c  config.h  entities.c  entities.h  fileio.c  fileio.h  forward.h  iconvtc.c  istack.c  lexer.c  lexer.h  localize.c  mappedio.c  message.h  parser.c  parser.h  pprint.c  pprint.h  stamp-h1  streamio.c  streamio.h  tagask.c  tags.c  tags.h  tidy-int.h  (+9 more)
test/: Makefile.am  accerr.txt  acctest.cmd  alltest.cmd  alltest1.cmd  tempres.txt  testaccessone.sh  testall.sh  testcases.txt  testone.sh  xmltest.cmd  xmltest1.cmd
test/input/: in_2900790-1.html  in_2900790-2.html  in_2900790-3.html  in_2900790-4.html  in_2900790-5.html  in_2900790-6.html  in_2901410-1.html  in_2901410-2.html  in_2901410-3.html  in_2901410-4.html  in_2901410-5.html  in_2901410-6.html  in_2901410-7.html  in_2901410-8.html  in_ac-form1.html
test/output/: msg_1002509.txt  msg_1003361.txt  msg_1014993.txt  msg_1015959.txt  msg_1027888.txt  msg_1050673.txt  msg_1052758.txt  msg_1053626.txt  msg_1055304.txt  msg_1055398.txt  msg_1056023.txt  msg_1056910.txt  msg_1062345.txt  msg_1062511.txt  msg_1063256.txt  msg_1068087.txt  msg_1072528.txt  msg_1078345.txt  msg_1079820.txt  msg_1086083.txt  msg_1090318.txt  msg_1098012.txt  msg_1107622.txt  msg_1115094.txt  msg_1145571.txt  msg_1183751.txt  msg_1210752.txt  msg_1231279.txt  msg_1241723.txt  msg_1263391.txt  msg_1266647.txt  msg_1282835.txt  msg_1286029.txt  msg_1316258.txt  msg_1316307-2.txt  msg_1316307.txt  msg_1326520.txt  msg_1331849.txt  msg_1333579.txt  msg_1359292.txt  (+286 more)
tidy/console/: tidy.c
tidy/htmldoc/: man_page.txt  quickref-html.xsl  quickref-man.xsl  quickref.html  tidy1.xsl
tidy/include/: buffio.h  fileio.h  html.h  platform.h  tidy.h  tidyenum.h
tidy/src/: access.c  access.h  alloc.c  attrask.c  attrdict.c  attrdict.h  attrget.c  attrs.c  attrs.h  buffio.c  charsets.c  charsets.h  clean.c  clean.h  config.c  config.h  entities.c  entities.h  fileio.c  fileio.h  forward.h  iconvtc.c  istack.c  lexer.c  lexer.h  localize.c  mappedio.c  mappedio.h  message.h  parser.c  parser.h  pprint.c  pprint.h  streamio.c  streamio.h  tagask.c  tags.c  tags.h  tidy-int.h  tidy.c  (+8 more)
tidy/test/: acctest.cmd  alltest.cmd  onetest.cmd  onetesta.cmd  testaccessone.sh  testall.sh  testone.sh  testxml.sh
